<!--
  ~ Copyright 2018 Soojeong Shin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Candy Pod</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Candy Pod</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="action_country">Country</string>
    <string name="search_hint">Search for podcasts</string>

    <!-- Title of navigation menu items -->
    <string name="podcasts">Podcasts</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>

    <!-- Content Description for a FAB and label for AddPodcastActivity -->
    <string name="add_podcast">Add Podcast</string>
    <!-- Content Description -->
    <string name="artwork_content_description">Artwork</string>
    <string name="rewind_content_description">Rewind</string>
    <string name="play_pause_content_description">Play or pause</string>
    <string name="fast_forward_content_description">Fast forward</string>
    <string name="download_content_description">Download</string>
    <string name="blur_content_desc">Blurry artwork</string>
    <string name="scrim_content_desc">Gradient scrim</string>
    <string name="palette_content_desc">Background color extracted from artwork</string>
    <string name="widget_empty_content_des">Empty image</string>

    <!-- Text for the subscribe button and label for the SubscribeActivity -->
    <string name="subscribe">Subscribe</string>
    <!-- Text for the unsubscribe button -->
    <string name="unsubscribe">Unsubscribe</string>
    <!-- Space used to set the title in the expanded collapsing toolbar -->
    <string name="space">\u0020</string>

    <!-- Label for the DetailActivity and NowPlayingActivity -->
    <string name="detail">Detail</string>
    <string name="now_playing">Now Playing</string>

    <!-- Context menu item -->
    <string name="action_delete">Delete</string>

    <!-- String for the empty view -->
    <string name="empty_podcasts">You do not have any subscriptions.\nYou can click
        the + button in the bottom right corner to add new podcasts.</string>
    <string name="empty_favorites">Start adding your favorite episodes by tapping a heart button!</string>
    <string name="empty_downloads">You have no downloaded episodes</string>
    <string name="empty_search_results">No results found</string>
    <string name="empty_offline">Please check your internet connection and try again</string>

    <!-- Notification actions -->
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>

    <!-- Notification channel name -->
    <string name="playback_channel_name">Playback</string>
    <string name="download_channel_name">Download</string>

    <!-- Toast -->
    <string name="toast_start_downloading">Start downloading&#8230;</string>
    <string name="toast_download_completed">Download completed</string>
    <string name="toast_remove_downloaded_episode">Remove downloaded episode</string>
    <string name="toast_download_failed">Download failed</string>
    <string name="toast_feed_url_null">The podcast feed URL is null</string>
    <string name="toast_query">query:\u0020</string>
    <string name="toast_source_error">Source error</string>

    <!-- Snackbar messages -->
    <string name="snackbar_subscribed">Subscribed</string>
    <string name="snackbar_removed">Removed</string>
    <string name="snackbar_action_go">Go to Podcasts</string>
    <string name="snackbar_added_to_fav">Added to Favorites</string>
    <string name="snackbar_removed_from_fav">Removed from Favorites</string>
    <string name="snackbar_support_audio">Sorry, we currently only support audio podcasts</string>

    <!-- Text for share intent-->
    <string name="check_out">Check out\u0020</string>
    <string name="chooser_title">Share Episode</string>

    <!-- Widget -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Key name in SharedPreferences -->
    <string name="pref_podcast_title_key" translatable="false">pref_podcast_title</string>
    <string name="pref_episode_title_key" translatable="false">pref_episode_title</string>
    <string name="pref_episode_image_key" translatable="false">pref_episode_image</string>

    <!-- The transition name -->
    <string name="transition_detail" translatable="false">transition_detail</string>
    <string name="transition_subscribe" translatable="false">transition_subscribe</string>
    <string name="transition_now" translatable="false">transition_now</string>

    <!-- The title of CountryPreferenceDialog -->
    <string name="title_country_dialog">Choose a country</string>

    <!-- - - - - - - - - - - - - - - -
      - Used by Preferences  -
      - - - - - - - - - - - - - - - -->

    <!-- Key name for storing country in SharedPreferences -->
    <string name="pref_country_key" translatable="false">country</string>
    <!-- Default for country preference -->
    <string name="pref_country_default" translatable="false">us</string>

    <!-- Labels for country preference -->
    <string name="pref_country_label_ca">Canada</string>
    <string name="pref_country_label_kr">South Korea</string>
    <string name="pref_country_label_us">United States</string>

    <!-- Values in SharedPreferences for country option-->
    <string name="pref_country_ca" translatable="false">ca</string>
    <string name="pref_country_kr" translatable="false">kr</string>
    <string name="pref_country_us" translatable="false">us</string>

    <!-- Label for the dark theme switch preference -->
    <string name="pref_dark_theme_label">Dark Theme</string>
    <!-- Key name for storing dark theme in SharedPreferences -->
    <string name="pref_dark_theme_key" translatable="false">dark_theme</string>

</resources>
