<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Soojeong Shin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_podcasts"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/podcasts" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_menu_playlist"
            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/downloads" />
    </group>

</menu>
