<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Soojeong Shin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_download"
        android:focusable="true"
        android:icon="@drawable/ic_menu_download"
        android:nextFocusRight="@+id/action_favorite"
        android:title="@string/action_download"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorite"
        android:focusable="true"
        android:icon="@drawable/ic_favorite_border"
        android:nextFocusLeft="@+id/action_download"
        android:nextFocusRight="@+id/action_share"
        android:title="@string/action_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:focusable="true"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:nextFocusLeft="@+id/action_favorite"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
</menu>