<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Soojeong Shin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.soojeongshin.candypod.ui.detail.DetailActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Blurry artwork -->
                    <ImageView
                        android:id="@+id/iv_blur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/blur_content_desc"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- ImageView for gradient scrim -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/scrim_gradient"
                        android:contentDescription="@string/scrim_content_desc" />

                    <ImageView
                        android:id="@+id/iv_artwork"
                        android:layout_width="@dimen/size_image_detail"
                        android:layout_height="@dimen/size_image_detail"
                        android:layout_marginTop="?android:attr/actionBarSize"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:contentDescription="@string/artwork_content_description"
                        android:transitionName="@string/transition_detail"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/left_guideline"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/margin_vertical_24"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
                        app:layout_constraintStart_toEndOf="@+id/iv_artwork"
                        app:layout_constraintTop_toTopOf="@+id/iv_artwork"
                        tools:text="The Joe Rogan Experience" />

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/margin_vertical_4"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
                        app:layout_constraintStart_toEndOf="@+id/iv_artwork"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title"
                        tools:text="Joe Rogan" />

                    <!-- Guideline for left(start) margin -->
                    <android.support.constraint.Guideline
                        android:id="@+id/left_guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="@dimen/guideline_begin" />

                    <!-- Guideline for right(end) margin -->
                    <android.support.constraint.Guideline
                        android:id="@+id/right_guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/guideline_begin" />

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="afterDescendants"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>
</layout>