<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Soojeong Shin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_episode_title"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="title" />

        <TextView
            android:id="@+id/tv_podcast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_episode_title"
            tools:text="podcast title" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_podcast_title" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_vertical_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar"
            tools:text="00:00" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_small"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar"
            tools:text="30:20" />

        <ImageButton
            android:id="@+id/ib_rewind"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="32dp"
            android:background="@null"
            android:contentDescription="@string/rewind_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/exo_controls_rewind"
            android:tint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_play_pause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start" />

        <ImageButton
            android:id="@+id/ib_play_pause"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="32dp"
            android:background="@null"
            android:contentDescription="@string/play_pause_content_description"
            android:scaleType="centerCrop"
            android:tint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start" />

        <ImageButton
            android:id="@+id/ib_fastforward"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="32dp"
            android:background="@null"
            android:contentDescription="@string/fast_forward_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/exo_controls_fastforward"
            android:tint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_play_pause"
            app:layout_constraintTop_toBottomOf="@+id/tv_start" />
    </android.support.constraint.ConstraintLayout>
</layout>